# plutonomy-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  contract.uplc  plutonomy-cli.cabal
app/: Main.hs
examples/fibonacci/: fibonacci.cbor  fibonacci.optimized.cbor  fibonnaci.optimized.uplc
