cabal-version: 2.4
name: plutonomy-cli
version: 0.1.0.0
license: BSD-3-Clause
author: KtorZ <matthias.benkort@gmail.com>, Niels Mündler
maintainer: n.muendler@posteo.de

executable plutonomy-cli
    main-is: Main.hs
    hs-source-dirs: app
    default-language: Haskell2010
    build-depends:
          base ^>=4.14.3.0
        , bytestring
        , optparse-applicative
        , plutonomy
        , plutus-core
        , prettyprinter-configurable
